# easy_ViTPose_doodle

./: .gitignore  Dockerfile  README.md  inference.py  pyproject.toml
config/: config.yaml
easy_ViTPose/: inference.py  train.py
easy_ViTPose/configs/: ViTPose_common.py  ViTPose_huge_coco_256x192.py  ViTPose_huge_doodle_256x192.py
easy_ViTPose/datasets/: Doodle.py
easy_ViTPose/datasets/Doodle_CI/annotations/: validation.json
easy_ViTPose/remove_background/: Dockerfile  main.py
easy_ViTPose/remove_background/transparent_background/: Remover.py
easy_ViTPose/remove_background/transparent_background/download/: config.yaml
easy_ViTPose/vit_utils/: train_valid_fn.py
one-ai/train_doodle_landmark/: .env  .gitignore  Dockerfile
one-ai/train_doodle_landmark/.devcontainer/: devcontainer.json
one-ai/train_doodle_landmark/config/: config.yaml  config_ci.yaml
one-ai/train_doodle_landmark/easy_ViTPose/: inference.py  train.py
one-ai/train_doodle_landmark/easy_ViTPose/configs/: ViTPose_doodle.py
one-ai/train_doodle_landmark/easy_ViTPose/datasets/: COCO.py
one-ai/train_doodle_landmark/easy_ViTPose/datasets/Doodle_CI/annotations/: train.json  train_bb.json  validation_bb.json
one-ai/train_doodle_landmark/easy_ViTPose/remove_background/: environment.yml
one-ai/train_doodle_landmark/easy_ViTPose/vit_utils/: inference.py  train_valid_fn.py  visualization.py
one-ai/train_doodle_landmark/preprocess_data/: .gitignore  environment.yml  load_lmk_label.py
one-ai/train_doodle_landmark/s3/: s3_file_manager.py  utils.py
preprocess_data/: .gitignore  load_lmk_label.py
preprocess_data/label_json/: project-7-at-2024-09-19-09-17-b447e130.json
s3/: environment.yml  s3_file_manager.py
