[tool.poetry]
name = "doodle_training"
version = "1.0.0"
description = "Training of landmark detection"
authors = ["ryan.chen"]
package-mode = false

[tool.poetry.dependencies]
python = "3.10.13"
certifi = "2023.7.22"
charset-normalizer = "3.2.0"
click = "8.0.4"
coloredlogs = "15.0.1"
contourpy = "1.1.1"
cycler = "0.11.0"
easydict = "1.13"
ffmpeg = "1.4"
filelock = "3.12.4"
filterpy = "1.4.5"
flatbuffers = "23.5.26"
fonttools = "4.43.0"
humanfriendly = "10.0"
idna = "3.4"
imageio = "2.31.3"
importlib-resources = "6.1.0"
json-tricks = "3.17.3"
jinja2 = ">=3.1.3"
kiwisolver = "1.4.5"
lazy_loader = "0.3"
MarkupSafe = "2.1.3"
matplotlib = "3.8.0"
mpmath = "1.3.0"
networkx = "3.1"
numpy = "1.26.0"
onnx = "1.14.1"
onnxruntime = "1.16.0"
opencv-python = "4.8.0.76"
packaging = "23.1"
pandas = "2.1.1"
Pillow = ">=10.2.0"
protobuf = "4.24.3"
psutil = "5.9.5"
py-cpuinfo = "9.0.0"
pycocotools = "2.0.8"
pyparsing = "3.1.1"
python-dateutil = "2.8.2"
pytz = "2023.3.post1"
PyWavelets = "1.4.1"
PyYAML = "6.0.1"
requests = "2.31.0"
scikit-image = "0.21.0"
scipy = "1.11.2"
seaborn = "0.12.2"
six = "1.16.0"
sympy = "1.12"
tifffile = "2023.9.18"
torch = {url = "https://download.pytorch.org/whl/cu121/torch-2.1.0%2Bcu121-cp310-cp310-linux_x86_64.whl"}
torchaudio = "2.1.0"
torchvision = "0.16.0"
tqdm = "4.66.1"
typing_extensions = "4.8.0"
tzdata = "2023.3"
ultralytics = "8.2.48"
urllib3 = ">=2.0.7"
zipp = "3.17.0"
kornia = "0.7.3"
timm = "1.0.10"
munkres = "1.1.4"
python-dotenv = "^1.0.1"
wandb = "0.18.3"
gdown = "^5.2.0"
wget = "^3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
